# formetis

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindMETIS.cmake  FindParMETIS.cmake  FlibUtils.cmake  FormetisConfig.cmake.in  formetis_version.c.in
doc/: CMakeLists.txt  Makefile  conf.py  index.rst  introduction.rst
doc/appendices/: interface.rst  license.rst
example/: CMakeLists.txt  metis.f90
include/: formetis.i  formetis_utils.i  forparmetis.i  mpi.i
src/: formetis.f90  formetisFORTRAN_wrap.c  forparmetis.f90  forparmetisFORTRAN_wrap.c
test/: CMakeLists.txt
